[package]
name = "sgp4x"
version = "1.0.0"
authors = ["Lomagno Cristian <lomagno2003@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SGP41 gas sensor with VOC and NOx measurement capabilities."
readme = "README.md"
repository = "https://github.com/lomagno2003/sgp4x-rs"
keywords = ["sgp40", "sgp41", "sensirion", "driver", "voc", "nox", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
sensirion-i2c = "0.4"
embedded-hal = { version = "1.0" }
gas-index-algorithm = "0.1.3"

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4"


[profile.release]
lto = true
